objects/TracHier__Master_Account_Member__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complete Company Memberships</relationshipLabel>
        <relationshipName>Master_Account_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Complete_Company_ID__c</fullName>
        <description>Complete company id.</description>
        <formula>TracHier__Master_Account__r.TracHier__Master_Account_ID__c</formula>
        <inlineHelpText>Complete company id.</inlineHelpText>
        <label>Complete Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__HierarchyLabel__c</fullName>
        <description>Hierarchy Label.</description>
        <formula>TracHier__Master_Account__r.TracHier__HierarchyLabel__c</formula>
        <inlineHelpText>Hierarchy Label</inlineHelpText>
        <label>Hierarchy Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__HierarchyType__c</fullName>
        <description>Hierarchy Type.</description>
        <formula>TracHier__Master_Account__r.TracHier__HierarchyType__c</formula>
        <inlineHelpText>Hierarchy Type</inlineHelpText>
        <label>Hierarchy Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Master_Account__c</fullName>
        <label>Complete Company</label>
        <referenceTo>TracHier__Master_Account__c</referenceTo>
        <relationshipLabel>Complete Company Members</relationshipLabel>
        <relationshipName>Master_Account_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Complete Company Member</label>
    <nameField>
        <label>Complete Company Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complete Company Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>